tests/e2e/object_assign_time.error
Error: syntax error in story at line 2, column 5

2|        server = 1s
          ^^^^^^^^^^^

E0100: Can't assign `time` to `Object`
