tests/e2e/object_assign_time.story
http server
    server = 1s
